add basic html and css

--- a/index.html
+++ b/index.html
@@ -7,10 +7,39 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta charset="utf-8">
 		
+		<!-- Stylesheet -->
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+		<link rel="stylesheet" href="css/style.css">
+
 		<!-- Title -->
 		<title>HTML Coming Soon</title>
 	</head>
 	<body>
-
+		<div id="container" class="container">
+			<div class="jumbotron text-center">
+				<h2 class="title uppercase">We're Coming Soon</h2>
+				<p class="description">The HTML Coming Soon project is using HTML, CSS and JavaScript in order to provide an <br> open-source coming soon page</p>
+			</div>
+			<ul class="social text-center">
+				<li>
+					<a href="#" class="fa fa-facebook"></a>
+				</li>
+				<li>
+					<a href="#" class="fa fa-youtube"></a>
+				</li>
+				<li>
+					<a href="#" class="fa fa-twitter"></a>
+				</li>
+				<li>
+					<a href="#" class="fa fa-google"></a>
+				</li>
+				<li>
+					<a href="#" class="fa fa-linkedin"></a>
+				</li>
+				<li>
+					<a href="#" class="fa fa-instagram"></a>
+				</li>
+			</ul>
+		</div>
 	</body>
 </html>
