--- a/index.html
+++ b/index.html
@@ -22,22 +22,22 @@
 			</div>
 			<ul class="social text-center">
 				<li>
-					<a href="#" class="fa fa-facebook"></a>
+					<a href="#" class="fa fa-facebook" target="_blank"></a>
 				</li>
 				<li>
-					<a href="#" class="fa fa-youtube"></a>
+					<a href="#" class="fa fa-youtube" target="_blank"></a>
 				</li>
 				<li>
-					<a href="#" class="fa fa-twitter"></a>
+					<a href="#" class="fa fa-twitter" target="_blank"></a>
 				</li>
 				<li>
-					<a href="#" class="fa fa-google"></a>
+					<a href="#" class="fa fa-google" target="_blank"></a>
 				</li>
 				<li>
-					<a href="#" class="fa fa-linkedin"></a>
+					<a href="#" class="fa fa-linkedin" target="_blank"></a>
 				</li>
 				<li>
-					<a href="#" class="fa fa-instagram"></a>
+					<a href="#" class="fa fa-instagram" target="_blank"></a>
 				</li>
 			</ul>
 		</div>
