--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<meta name="description" content="{description}">
-		<meta name="keywords" content="{keywords}">
+		<meta name="description" content="The HTML Coming Soon project is using HTML, CSS and JavaScript in order to provide an open-source coming soon page">
+		<meta name="keywords" content="html, css, javascript, open-source, github">
 		<meta name="author" content="Alisson Eduardo Bagnara">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta charset="utf-8">
